# RAG-demo

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
automation/: test-podman.py
podman/test-chat/: Dockerfile  entrypoint-editable.sh  entrypoint-pypi.sh
podman/test-chat-pypi/: Dockerfile  entrypoint.sh
src/rag_demo/: __main__.py  app.py  app_protocol.py  constants.py  dirs.py  logic.py  probe.py  rag.py  rag_demo.tcss
src/rag_demo/agents/: __init__.py  base.py  dummy.py  hugging_face.py  llama_cpp.py  ollama.py
src/rag_demo/app/: __init__.py
src/rag_demo/modes/: __init__.py  _app_types.py  _logic_provider.py  _rag_demo_screen.py  chat.py  chat.tcss  config.py  help.py  retrieval.py
src/rag_demo/widgets/: __init__.py  markdown.py
tests/rag_demo/: conftest.py  test_app.py  test_dirs.py  test_logic.py  test_main.py  test_markdown.py  test_rag.py
