[project]
name = "jehoctor-rag-demo"
version = "0.1.1.dev1"
description = "Chat with Wikipedia"
readme = "README.md"
authors = [
    { name = "James Hoctor", email = "JEHoctor@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "datasets>=4.4.1",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "llama-cpp-python>=0.3.16",
    "platformdirs>=4.5.0",
    "pydantic>=2.12.4",
    "pyperclip>=1.11.0",
    "textual>=6.5.0",
    "typer>=0.20.0",
]

[project.scripts]
chat = "rag_demo.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "mypy>=1.18.2",
    "textual-dev>=1.8.0",
    "ipython>=9.7.0",
    "pytest-cov>=7.0.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "rag_demo"

[tool.ruff]
line-length = 120
per-file-ignores = { "__init__.py" = ["F401"] }
