[project]
name = "jehoctor-rag-demo"
version = "0.2.0"
description = "Chat with Wikipedia"
readme = "README.md"
authors = [
    { name = "James Hoctor", email = "JEHoctor@protonmail.com" }
]
requires-python = "~=3.12.0"
# TODO: Reverse pinning of aiosqlite to 0.21.0 to work around this issue:
# https://github.com/langchain-ai/langgraph/issues/6583
# TODO: Should I depend on xformers "for a more memory-efficient attention implementation?
# https://docs.langchain.com/oss/python/integrations/llms/huggingface_pipelines
dependencies = [
    "aiosqlite==0.21.0",
    "bitsandbytes>=0.49.1",
    "chromadb>=1.3.4",
    "datasets>=4.4.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "nvidia-ml-py>=13.590.44",
    "ollama>=0.6.0",
    "platformdirs>=4.5.0",
    "psutil>=7.1.3",
    "py-cpuinfo>=9.0.0",
    "pydantic>=2.12.4",
    "pyperclip>=1.11.0",
    "sentence-transformers>=5.2.2",
    "textual>=6.5.0",
    "transformers[torch]>=4.57.6",
    "typer>=0.20.0",
]

[project.optional-dependencies]
llamacpp = [
    "llama-cpp-python>=0.3.16",
]

[project.scripts]
chat = "rag_demo.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "mypy>=1.18.2",
    "textual-dev>=1.8.0",
    "ipython>=9.7.0",
    "ty>=0.0.13",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-metal"
url = "https://abetlen.github.io/llama-cpp-python/whl/metal"
explicit = true

[tool.uv.sources]
llama-cpp-python = [
    { index = "llama-cpp-metal", marker = "platform_machine == 'arm64' and sys_platform == 'darwin'" },
    { index = "llama-cpp-metal", marker = "platform_machine == 'aarch64' and sys_platform == 'darwin'" },
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "rag_demo"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # Handled by ruff format (line-too-long)
    "D100",   # undocumented-public-module
    "D104",   # undocumented-public-package
    "D203",   # Conflicts with Google style D211/D212
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused-import in all __init__.py files.
"tests/*" = [
    "S101",    # Assert statements are allowed in tests.
    "INP001",  # No need to create __init__.py files in the tests/ directory; only pytest runs the tests.
    "C419",    # It's OK to use extra list comprehensions in tests to make the output more informative.
    "PLR2004", # There are going to be some magic values in the tests. It's OK.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["textual.reactive.reactive"]

[tool.mypy]
strict = true
show_error_codes = true
warn_unused_ignores = true
files = ["src/", "tests/"]

[tool.mypy.plugins]
pydantic.mypy.plugins = { enabled = true }
